gen/pyGramParser.java
// Generated from C:/Users/gstvu/Documents/Compilador-Python\pyGram.g4 by ANTLR 4.10.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class pyGramParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ASSIGNMENT=1, GT=2, LT=3, GE=4, LE=5, EQ=6, NE=7, PLUS=8, MINUS=9, TIMES=10, 
		DIVIDES=11, COMMA=12, COLON=13, SEMI_COLON=14, OPEN=15, CLOSE=16, BRACKET=17, 
		OR=18, AND=19, NOT=20, FOR=21, BREAK=22, IF=23, ELSE=24, WHILE=25, IN=26, 
		DEF=27, MAIN=28, RETURN=29, VOID=30, TYPE=31, PRINT=32, INPUT=33, RANGE=34, 
		INT_VALUE=35, FLOAT_VALUE=36, STR_VALUE=37, BOOL_VALUE=38, ID=39, WS=40;
	public static final int
		RULE_prog = 0, RULE_main = 1, RULE_local = 2, RULE_function = 3, RULE_r_return = 4, 
		RULE_function_call = 5, RULE_r_for = 6, RULE_r_while = 7, RULE_r_break = 8, 
		RULE_r_if = 9, RULE_r_else = 10, RULE_r_print = 11, RULE_declaration = 12, 
		RULE_assigment = 13, RULE_expr = 14, RULE_term = 15, RULE_term2 = 16, 
		RULE_term3 = 17, RULE_term4 = 18, RULE_term5 = 19, RULE_term6 = 20, RULE_factor = 21, 
		RULE_r_input = 22;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "main", "local", "function", "r_return", "function_call", "r_for", 
			"r_while", "r_break", "r_if", "r_else", "r_print", "declaration", "assigment", 
			"expr", "term", "term2", "term3", "term4", "term5", "term6", "factor", 
			"r_input"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'='", "'>'", "'<'", "'>='", "'<='", "'=='", "'!='", "'+'", "'-'", 
			"'*'", "'/'", "','", "':'", "';'", "'('", "')'", "'}'", "'or'", "'and'", 
			"'not'", "'for'", "'break'", "'if'", "'else'", "'while'", "'in'", "'def'", 
			"'main'", "'return'", "'void'", null, "'print'", "'input'", "'range'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "ASSIGNMENT", "GT", "LT", "GE", "LE", "EQ", "NE", "PLUS", "MINUS", 
			"TIMES", "DIVIDES", "COMMA", "COLON", "SEMI_COLON", "OPEN", "CLOSE", 
			"BRACKET", "OR", "AND", "NOT", "FOR", "BREAK", "IF", "ELSE", "WHILE", 
			"IN", "DEF", "MAIN", "RETURN", "VOID", "TYPE", "PRINT", "INPUT", "RANGE", 
			"INT_VALUE", "FLOAT_VALUE", "STR_VALUE", "BOOL_VALUE", "ID", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "pyGram.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public pyGramParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public MainContext main() {
			return getRuleContext(MainContext.class,0);
		}
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public List<FunctionContext> function() {
			return getRuleContexts(FunctionContext.class);
		}
		public FunctionContext function(int i) {
			return getRuleContext(FunctionContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pyGramListener ) ((pyGramListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pyGramListener ) ((pyGramListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pyGramVisitor ) return ((pyGramVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TYPE) {
				{
				{
				setState(46);
				declaration();
				}
				}
				setState(51);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(55);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DEF) {
				{
				{
				setState(52);
				function();
				}
				}
				setState(57);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(58);
			main();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainContext extends ParserRuleContext {
		public TerminalNode MAIN() { return getToken(pyGramParser.MAIN, 0); }
		public TerminalNode OPEN() { return getToken(pyGramParser.OPEN, 0); }
		public TerminalNode CLOSE() { return getToken(pyGramParser.CLOSE, 0); }
		public TerminalNode COLON() { return getToken(pyGramParser.COLON, 0); }
		public LocalContext local() {
			return getRuleContext(LocalContext.class,0);
		}
		public TerminalNode BRACKET() { return getToken(pyGramParser.BRACKET, 0); }
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pyGramListener ) ((pyGramListener)listener).enterMain(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pyGramListener ) ((pyGramListener)listener).exitMain(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pyGramVisitor ) return ((pyGramVisitor<? extends T>)visitor).visitMain(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_main);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			match(MAIN);
			setState(61);
			match(OPEN);
			setState(62);
			match(CLOSE);
			setState(63);
			match(COLON);
			setState(64);
			local();
			setState(65);
			match(BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LocalContext extends ParserRuleContext {
		public R_forContext r_for() {
			return getRuleContext(R_forContext.class,0);
		}
		public LocalContext local() {
			return getRuleContext(LocalContext.class,0);
		}
		public R_breakContext r_break() {
			return getRuleContext(R_breakContext.class,0);
		}
		public R_whileContext r_while() {
			return getRuleContext(R_whileContext.class,0);
		}
		public R_ifContext r_if() {
			return getRuleContext(R_ifContext.class,0);
		}
		public R_elseContext r_else() {
			return getRuleContext(R_elseContext.class,0);
		}
		public R_printContext r_print() {
			return getRuleContext(R_printContext.class,0);
		}
		public AssigmentContext assigment() {
			return getRuleContext(AssigmentContext.class,0);
		}
		public Function_callContext function_call() {
			return getRuleContext(Function_callContext.class,0);
		}
		public TerminalNode SEMI_COLON() { return getToken(pyGramParser.SEMI_COLON, 0); }
		public R_returnContext r_return() {
			return getRuleContext(R_returnContext.class,0);
		}
		public LocalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_local; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pyGramListener ) ((pyGramListener)listener).enterLocal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pyGramListener ) ((pyGramListener)listener).exitLocal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pyGramVisitor ) return ((pyGramVisitor<? extends T>)visitor).visitLocal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LocalContext local() throws RecognitionException {
		LocalContext _localctx = new LocalContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_local);
		int _la;
		try {
			setState(96);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(67);
				r_for();
				setState(68);
				local();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(70);
				r_break();
				setState(71);
				local();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(73);
				r_while();
				setState(74);
				local();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(76);
				r_if();
				setState(78);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ELSE) {
					{
					setState(77);
					r_else();
					}
				}

				setState(80);
				local();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(82);
				r_print();
				setState(83);
				local();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(85);
				assigment();
				setState(86);
				local();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(88);
				function_call();
				setState(89);
				match(SEMI_COLON);
				setState(90);
				local();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(92);
				r_return();
				setState(93);
				local();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionContext extends ParserRuleContext {
		public FunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function; }
	 
		public FunctionContext() { }
		public void copyFrom(FunctionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class L_typeContext extends FunctionContext {
		public TerminalNode DEF() { return getToken(pyGramParser.DEF, 0); }
		public List<TerminalNode> TYPE() { return getTokens(pyGramParser.TYPE); }
		public TerminalNode TYPE(int i) {
			return getToken(pyGramParser.TYPE, i);
		}
		public List<TerminalNode> ID() { return getTokens(pyGramParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(pyGramParser.ID, i);
		}
		public TerminalNode OPEN() { return getToken(pyGramParser.OPEN, 0); }
		public TerminalNode CLOSE() { return getToken(pyGramParser.CLOSE, 0); }
		public TerminalNode COLON() { return getToken(pyGramParser.COLON, 0); }
		public LocalContext local() {
			return getRuleContext(LocalContext.class,0);
		}
		public TerminalNode BRACKET() { return getToken(pyGramParser.BRACKET, 0); }
		public List<TerminalNode> COMMA() { return getTokens(pyGramParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(pyGramParser.COMMA, i);
		}
		public L_typeContext(FunctionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pyGramListener ) ((pyGramListener)listener).enterL_type(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pyGramListener ) ((pyGramListener)listener).exitL_type(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pyGramVisitor ) return ((pyGramVisitor<? extends T>)visitor).visitL_type(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class L_voidContext extends FunctionContext {
		public TerminalNode DEF() { return getToken(pyGramParser.DEF, 0); }
		public TerminalNode VOID() { return getToken(pyGramParser.VOID, 0); }
		public List<TerminalNode> ID() { return getTokens(pyGramParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(pyGramParser.ID, i);
		}
		public TerminalNode OPEN() { return getToken(pyGramParser.OPEN, 0); }
		public TerminalNode CLOSE() { return getToken(pyGramParser.CLOSE, 0); }
		public TerminalNode COLON() { return getToken(pyGramParser.COLON, 0); }
		public LocalContext local() {
			return getRuleContext(LocalContext.class,0);
		}
		public TerminalNode BRACKET() { return getToken(pyGramParser.BRACKET, 0); }
		public List<TerminalNode> TYPE() { return getTokens(pyGramParser.TYPE); }
		public TerminalNode TYPE(int i) {
			return getToken(pyGramParser.TYPE, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(pyGramParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(pyGramParser.COMMA, i);
		}
		public L_voidContext(FunctionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pyGramListener ) ((pyGramListener)listener).enterL_void(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pyGramListener ) ((pyGramListener)listener).exitL_void(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pyGramVisitor ) return ((pyGramVisitor<? extends T>)visitor).visitL_void(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionContext function() throws RecognitionException {
		FunctionContext _localctx = new FunctionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_function);
		int _la;
		try {
			setState(140);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				_localctx = new L_typeContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(98);
				match(DEF);
				setState(99);
				match(TYPE);
				setState(100);
				match(ID);
				setState(101);
				match(OPEN);
				setState(112);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==TYPE) {
					{
					setState(102);
					match(TYPE);
					setState(103);
					match(ID);
					setState(109);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==COMMA) {
						{
						{
						setState(104);
						match(COMMA);
						setState(105);
						match(TYPE);
						setState(106);
						match(ID);
						}
						}
						setState(111);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
				}

				setState(114);
				match(CLOSE);
				setState(115);
				match(COLON);
				setState(116);
				local();
				setState(117);
				match(BRACKET);
				}
				break;
			case 2:
				_localctx = new L_voidContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(119);
				match(DEF);
				setState(120);
				match(VOID);
				setState(121);
				match(ID);
				setState(122);
				match(OPEN);
				setState(133);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==TYPE) {
					{
					setState(123);
					match(TYPE);
					setState(124);
					match(ID);
					setState(130);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==COMMA) {
						{
						{
						setState(125);
						match(COMMA);
						setState(126);
						match(TYPE);
						setState(127);
						match(ID);
						}
						}
						setState(132);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
				}

				setState(135);
				match(CLOSE);
				setState(136);
				match(COLON);
				setState(137);
				local();
				setState(138);
				match(BRACKET);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class R_returnContext extends ParserRuleContext {
		public TerminalNode RETURN() { return getToken(pyGramParser.RETURN, 0); }
		public TerminalNode SEMI_COLON() { return getToken(pyGramParser.SEMI_COLON, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public R_returnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_r_return; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pyGramListener ) ((pyGramListener)listener).enterR_return(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pyGramListener ) ((pyGramListener)listener).exitR_return(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pyGramVisitor ) return ((pyGramVisitor<? extends T>)visitor).visitR_return(this);
			else return visitor.visitChildren(this);
		}
	}

	public final R_returnContext r_return() throws RecognitionException {
		R_returnContext _localctx = new R_returnContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_r_return);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			match(RETURN);
			setState(144);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MINUS) | (1L << OPEN) | (1L << NOT) | (1L << INT_VALUE) | (1L << FLOAT_VALUE) | (1L << STR_VALUE) | (1L << BOOL_VALUE) | (1L << ID))) != 0)) {
				{
				setState(143);
				expr(0);
				}
			}

			setState(146);
			match(SEMI_COLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Function_callContext extends ParserRuleContext {
		public  type;
		public TerminalNode ID() { return getToken(pyGramParser.ID, 0); }
		public TerminalNode OPEN() { return getToken(pyGramParser.OPEN, 0); }
		public TerminalNode CLOSE() { return getToken(pyGramParser.CLOSE, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(pyGramParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(pyGramParser.COMMA, i);
		}
		public Function_callContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_call; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pyGramListener ) ((pyGramListener)listener).enterFunction_call(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pyGramListener ) ((pyGramListener)listener).exitFunction_call(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pyGramVisitor ) return ((pyGramVisitor<? extends T>)visitor).visitFunction_call(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Function_callContext function_call() throws RecognitionException {
		Function_callContext _localctx = new Function_callContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_function_call);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			match(ID);
			setState(149);
			match(OPEN);
			setState(158);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MINUS) | (1L << OPEN) | (1L << NOT) | (1L << INT_VALUE) | (1L << FLOAT_VALUE) | (1L << STR_VALUE) | (1L << BOOL_VALUE) | (1L << ID))) != 0)) {
				{
				setState(150);
				expr(0);
				setState(155);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(151);
					match(COMMA);
					setState(152);
					expr(0);
					}
					}
					setState(157);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(160);
			match(CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class R_forContext extends ParserRuleContext {
		public TerminalNode FOR() { return getToken(pyGramParser.FOR, 0); }
		public TerminalNode ID() { return getToken(pyGramParser.ID, 0); }
		public TerminalNode IN() { return getToken(pyGramParser.IN, 0); }
		public TerminalNode RANGE() { return getToken(pyGramParser.RANGE, 0); }
		public TerminalNode OPEN() { return getToken(pyGramParser.OPEN, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode CLOSE() { return getToken(pyGramParser.CLOSE, 0); }
		public TerminalNode COLON() { return getToken(pyGramParser.COLON, 0); }
		public LocalContext local() {
			return getRuleContext(LocalContext.class,0);
		}
		public TerminalNode BRACKET() { return getToken(pyGramParser.BRACKET, 0); }
		public TerminalNode COMMA() { return getToken(pyGramParser.COMMA, 0); }
		public R_forContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_r_for; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pyGramListener ) ((pyGramListener)listener).enterR_for(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pyGramListener ) ((pyGramListener)listener).exitR_for(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pyGramVisitor ) return ((pyGramVisitor<? extends T>)visitor).visitR_for(this);
			else return visitor.visitChildren(this);
		}
	}

	public final R_forContext r_for() throws RecognitionException {
		R_forContext _localctx = new R_forContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_r_for);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162);
			match(FOR);
			setState(163);
			match(ID);
			setState(164);
			match(IN);
			setState(165);
			match(RANGE);
			setState(166);
			match(OPEN);
			setState(170);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				{
				setState(167);
				expr(0);
				setState(168);
				match(COMMA);
				}
				break;
			}
			setState(172);
			expr(0);
			setState(173);
			match(CLOSE);
			setState(174);
			match(COLON);
			setState(175);
			local();
			setState(176);
			match(BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class R_whileContext extends ParserRuleContext {
		public TerminalNode WHILE() { return getToken(pyGramParser.WHILE, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode COLON() { return getToken(pyGramParser.COLON, 0); }
		public LocalContext local() {
			return getRuleContext(LocalContext.class,0);
		}
		public TerminalNode BRACKET() { return getToken(pyGramParser.BRACKET, 0); }
		public R_whileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_r_while; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pyGramListener ) ((pyGramListener)listener).enterR_while(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pyGramListener ) ((pyGramListener)listener).exitR_while(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pyGramVisitor ) return ((pyGramVisitor<? extends T>)visitor).visitR_while(this);
			else return visitor.visitChildren(this);
		}
	}

	public final R_whileContext r_while() throws RecognitionException {
		R_whileContext _localctx = new R_whileContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_r_while);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(178);
			match(WHILE);
			setState(179);
			expr(0);
			setState(180);
			match(COLON);
			setState(181);
			local();
			setState(182);
			match(BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class R_breakContext extends ParserRuleContext {
		public TerminalNode BREAK() { return getToken(pyGramParser.BREAK, 0); }
		public TerminalNode SEMI_COLON() { return getToken(pyGramParser.SEMI_COLON, 0); }
		public R_breakContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_r_break; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pyGramListener ) ((pyGramListener)listener).enterR_break(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pyGramListener ) ((pyGramListener)listener).exitR_break(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pyGramVisitor ) return ((pyGramVisitor<? extends T>)visitor).visitR_break(this);
			else return visitor.visitChildren(this);
		}
	}

	public final R_breakContext r_break() throws RecognitionException {
		R_breakContext _localctx = new R_breakContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_r_break);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(184);
			match(BREAK);
			setState(185);
			match(SEMI_COLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
